# Data-visualizer

./: CMakeLists.txt  README.md  a.out  test.cpp  widgets.cpp
app/: LCommon.h  LConfig.h  main.cpp
app/include/: LClass.h  LShader.h
app/src/: LClass.cpp  LShader.cpp
